<resources>
    <string name="app_name">Android10Snippet-pre29</string>

    <!-- fragment labels -->
    <string name="admin_info_fragment_label">Administrator Info</string>
    <string name="camera_fragment_label">Camera and Connectivity</string>
    <string name="identifiers_fragment_label">Identifiers and Data</string>
    <string name="privacy_changes_label">Top Privacy Changes</string>
    <string name="wifi_p2p_label">WiFi Peer to Peer</string>

    <!-- button labels -->
    <string name="access_external_storage_button">Access External Storage</string>
    <string name="connect_to_hotspot">Connect</string>
    <string name="get_contacts_button">Get contacts</string>
    <string name="get_clipboard_data">Get clipboard data</string>
    <string name="go_to_next_screen">Go to next Screen</string>

    <!-- field labels -->
    <string name="actual_mac_address">Randomized MAC address</string>
    <string name="build_serial">Build Serial</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="connection_owner_uid">Connection owners unique identifier</string>
    <string name="randomized_mac_address">Randomized MAC address</string>
    <string name="used_mac_address">MAC address used</string>

    <!-- admin -->
    <string name="sample_device_admin">admin</string>
    <string name="sample_device_admin_description">admin</string>
    <string name="go_to_admin">Go to admin</string>
    <string name="activate_admin">Activate admin mode</string>

    <!-- error -->
    <string name="error_build_serial_not_implemented">Build Serial only available after Android Oreo</string>
    <string name="error_not_available_common">Not available</string>
    <string name="error_proc_net_not_available">/proc/net access not available on Android 10+</string>

    <!-- hints -->
    <string name="access_external_storage_hint">Text from the file in external storage will be here after you press the button.</string>
    <string name="wifi_p2p_connect_to_hotspot_hint">Press this button to connect to the hotspot</string>
    <string name="wifi_p2p_hint">To test it you will need two devices. You start the hotspot on first device, and on the second one input its ssid it the field below and connect to it</string>
    <string name="wifi_p2p_input_hint">Input hotspot SSID here</string>
    <string name="wifi_p2p_password_hint">Input hotspot password here</string>
    <string name="wifi_p2p_start_hotspot_hint">Press this button to start hotspot</string>
    <string name="wifi_p2p_title">Android 9 uses old API for establishing WiFi Peer to Peer connections</string>
</resources>