<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/activateAdminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_admin"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/getContactsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_contacts_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activateAdminButton" />

    <ListView
        android:id="@+id/contactsListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/getContactsButton"/>

    <Button
        android:id="@+id/goToAdminInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_admin"
        app:layout_constraintTop_toBottomOf="@id/contactsListView"/>

    <TextView
        android:id="@+id/connectionUidTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_owner_uid"
        app:layout_constraintTop_toBottomOf="@id/goToAdminInfoButton"/>

    <TextView
        android:id="@+id/connectionUidTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/connectionUidTitleTextView"/>

    <TextView
        android:id="@+id/serialTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/build_serial"
        app:layout_constraintTop_toBottomOf="@id/connectionUidTextView"/>

    <TextView
        android:id="@+id/serialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/serialTitleTextView"/>

    <Button
        android:id="@+id/getClipboardDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_clipboard_data"
        app:layout_constraintTop_toBottomOf="@id/serialTextView"/>

    <TextView
        android:id="@+id/clipboardDataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/getClipboardDataButton"/>

    <Button
        android:id="@+id/goToNextScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_next_screen"
        app:layout_constraintTop_toBottomOf="@id/clipboardDataTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>